[gd_scene load_steps=7 format=3 uid="uid://216oynde0u82"]

[ext_resource type="Script" uid="uid://c41syovpkxj2v" path="res://brush.gd" id="1_jr7ni"]
[ext_resource type="Script" uid="uid://cdl6n4avmgb6b" path="res://pass_control.gd" id="2_kxle2"]
[ext_resource type="Texture2D" uid="uid://2magpde8r3kw" path="res://icon.svg" id="3_mhht3"]

[sub_resource type="Gradient" id="Gradient_cotvx"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5ono5"]
gradient = SubResource("Gradient_cotvx")
fill_from = Vector2(0, 0.51495725)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhht3"]
bg_color = Color(0, 0, 0, 1)

[node name="Control" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jr7ni")

[node name="BG" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
custom_minimum_size = Vector2(1920, 100)
layout_mode = 2
texture = SubResource("GradientTexture2D_5ono5")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1920, 1080)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Line2D" type="Line2D" parent="SubViewport"]
position = Vector2(16, 5)
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.46080002, 0.96, 0.80192, 1)

[node name="CURSOR_VIEWPORT" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="BRUSH" type="ColorRect" parent="CURSOR_VIEWPORT"]
offset_right = 4.0
offset_bottom = 4.0
color = Color(0.46080002, 0.96, 0.80192, 0.64705884)

[node name="Line2D" type="Line2D" parent="CURSOR_VIEWPORT"]
position = Vector2(16, 5)
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.46080002, 0.96, 0.80192, 0.64705884)

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2

[node name="MENU_CONTROL" type="Control" parent="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="MENU" type="Button" parent="Control/MENU_CONTROL"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_right = 28.5
offset_bottom = 31.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mhht3")
text = "MENU"

[node name="FileDialog" type="FileDialog" parent="Control"]
oversampling_override = 1.0
initial_position = 1
display_mode = 1
access = 2

[node name="Control" type="Control" parent="Control"]
visible = false
custom_minimum_size = Vector2(800, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -20.0
offset_right = 182.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CLEAR" type="Button" parent="Control/Control/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "CLEAR"

[node name="RECENTS" type="Button" parent="Control/Control/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "RECENTS"

[node name="PASTE" type="Button" parent="Control/Control/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "PASTE"

[node name="SAVE" type="Button" parent="Control/Control/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "SAVE"

[node name="PASSTHROUGH" type="Button" parent="Control/Control/HBoxContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
text = "PASSTHROUGH MODE OFF"

[node name="QUIT" type="Button" parent="Control/Control/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "QUIT"

[node name="CONTROL" type="Window" parent="." node_paths=PackedStringArray("CONTROLLER")]
transparent_bg = true
oversampling_override = 1.0
title = "INPUT"
initial_position = 3
size = Vector2i(1920, 1080)
current_screen = 1
transparent = true
force_native = true
content_scale_size = Vector2i(1920, 1080)
content_scale_mode = 2
script = ExtResource("2_kxle2")
CONTROLLER = NodePath("..")

[node name="SubViewportContainer" type="SubViewportContainer" parent="CONTROL"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Control" type="Control" parent="CONTROL/SubViewportContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CONTROL/SubViewportContainer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = 806.5
offset_right = 1073.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="CONTROL/SubViewportContainer/Control/HBoxContainer"]
layout_mode = 2
text = "CLEAR"

[node name="PASTE" type="Button" parent="CONTROL/SubViewportContainer/Control/HBoxContainer"]
layout_mode = 2
text = "PASTE"

[node name="SAVE" type="Button" parent="CONTROL/SubViewportContainer/Control/HBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="QUIT" type="Button" parent="CONTROL/SubViewportContainer/Control/HBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="SubViewport" type="SubViewport" parent="CONTROL/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="TextureRect_CLONE" type="TextureRect" parent="CONTROL/SubViewportContainer/SubViewport"]
show_behind_parent = true
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("3_mhht3")
expand_mode = 1
stretch_mode = 2

[node name="RECENTS" type="Window" parent="."]
oversampling_override = 1.0
title = "RECENTS"
initial_position = 1
size = Vector2i(820, 600)
visible = false
exclusive = true
unresizable = true
always_on_top = true
popup_window = true
minimize_disabled = true
maximize_disabled = true

[node name="Control2" type="Control" parent="RECENTS"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CLEAR_RECENTS" type="Button" parent="RECENTS/Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_bottom = 31.0
grow_horizontal = 0
text = "CLEAR LIST"

[node name="CANCEL" type="Button" parent="RECENTS/Control2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "CANCEL"

[node name="ScrollContainer" type="ScrollContainer" parent="RECENTS/Control2"]
custom_minimum_size = Vector2(820, 500)
layout_mode = 0
offset_left = 5.0
offset_top = 50.0
offset_right = 825.0
offset_bottom = 550.0

[node name="RECENTS_CONTAINER" type="GridContainer" parent="RECENTS/Control2/ScrollContainer"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
columns = 4

[connection signal="mouse_entered" from="Control/MENU_CONTROL/MENU" to="." method="_on_menu_mouse_entered"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="mouse_exited" from="Control/Control" to="." method="_on_control_mouse_exited"]
[connection signal="pressed" from="Control/Control/HBoxContainer/CLEAR" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/RECENTS" to="." method="_on_recents_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/PASTE" to="." method="_on_paste_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/SAVE" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/PASSTHROUGH" to="." method="_on_passthrough_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CONTROL/SubViewportContainer/Control/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CONTROL/SubViewportContainer/Control/HBoxContainer/PASTE" to="." method="_on_paste_pressed"]
[connection signal="pressed" from="CONTROL/SubViewportContainer/Control/HBoxContainer/SAVE" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CONTROL/SubViewportContainer/Control/HBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="close_requested" from="RECENTS" to="." method="_on_recents_close_requested"]
[connection signal="pressed" from="RECENTS/Control2/CLEAR_RECENTS" to="." method="_on_clear_recents_pressed"]
[connection signal="pressed" from="RECENTS/Control2/CANCEL" to="." method="_on_cancel_load_from_recents_pressed"]
